feat: show the configuration log in the administration surface
Adds the AdminAuditView table (newest first, message/subject/actor
resolution per the design's erasure and system-actor rules), wires it
into App.tsx and the HomeView nav, and extends the bootstrap-admin and
accessibility E2E suites with the log's own "done when" journey.

Fixes a NullPointerException in AuditService.namesFor: Map.copyOf
rejects a null value, which every unnamed court, card or rule set
produces legitimately, so the endpoint 500'd on the ordinary case.
Switches to an unmodifiable HashMap view instead, with a regression
test.

Also updates SpaConfiguration, SecurityConfiguration and their tests
so the new client route is forwarded and reachable before sign-in,
which tools/spa-route-policy.test.mjs requires.